Show game name on help overlay

--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ canvas{display:block;width:100%;height:100%}
 <!-- Help overlay -->
 <div class="overlay hidden" id="helpOverlay">
   <div class="panel">
-    <h2>How to Play</h2>
+    <h2>Stack Tower</h2>
     <div class="how-to">
       <div class="step">
         <div class="step-icon">👆</div>
